[package]
name = "tellme"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = "0.4.28"
dotenv = "0.15.0"
lettre = { version = "0.10.4", features = ["tokio1-native-tls"] }
nanoid = "0.4.0"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls", "sqlite", "chrono" ] }
tokio = "1.32.0"
validator = { version = "0.16.1", features = ["derive"] }
